# pos-desktop

./: BACKEND-SETUP.md  GUIA-BACKEND.md  README.md  SETUP-RAPIDO.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: publish-release.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
update-server/: server.js
