[package]
name = "devnest-pos-desktop"
version = "1.0.0"
description = "DevNest POS Desktop App"
authors = ["DevNest"]
edition = "2021"

[lib]
name = "devnest_pos_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
